--- a/wercker.yml
+++ b/wercker.yml
@@ -11,7 +11,7 @@ deploy:
         - install-packages:
             packages: git ssh-client
         - leipert/git-push:
-            token: $GIT_TOKEN
+            gh_oauth: $GIT_TOKEN
             branch: master
             basedir: public
             repo: kosuke-isumi/kosuke-isumi.github.io
